--- a/src/styles/quarks/_quarks.variables.scss
+++ b/src/styles/quarks/_quarks.variables.scss
@@ -10,8 +10,8 @@
 $font-family-base: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-headings: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-family-monospace: Menlo, Monaco, Consolas, 'Courier New', monospace;
-$brand-primary: #000000;
-$brand-secondary: #DF4661;
+$brand-primary: #0064B4;
+$brand-secondary: #CF0039;
 $normal: 700;
 $header-bg: darken($brand-primary, 8%);
 $header-border: rgba($black, 0);
